# JPEG_XL_dopus_experiment

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.ps1  vcpkg.json
.github/workflows/: main.yaml
src/jpegxl/: PrecompiledHeader.h  main.cpp
vcpkg/overlay_triplets/: x64-windows-static.cmake
